Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109140

[REG: 5->6] Slowly dragging Tumbler causes numbers to jump around

XMLWordPrintable

    • b307bf3c4 (dev), f154f6f1c (6.4), 8142a7944 (6.3), 44485f44b (tqtc/lts-6.2), e3f5774ba (6.5), e6b374463 (tqtc/lts-5.15)

      Run attached example and try dragging hour entry slowly. At some point the numbers start to jump back and forth.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hurlevent Oliver Eftevaag
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: